crates/core-executor/src/tests/sql/commands/snapshots/ilike_any/query_ilike_any_odd.snap
---
source: crates/core-executor/src/tests/sql/commands/ilike_any.rs
description: "\"SELECT * FROM VALUES\n                ('John  Dddoe'),\n                ('Joe   Doe'),\n                ('John_down'),\n                ('Joe down'),\n                ('Tom   Doe'),\n                ('Tim down'),\n                (NULL)\n            WHERE column1 ILIKE ANY ('%Jo%oe%','T%e', '%Tim%')\n            ORDER BY column1\""
---
Ok(
    [
        "+-------------+",
        "| column1     |",
        "+-------------+",
        "| Joe   Doe   |",
        "| John  Dddoe |",
        "| Tim down    |",
        "| Tom   Doe   |",
        "+-------------+",
    ],
)
